--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <body>
   <h1>This site has moved to https://www.nickchan.lol. You are being redirected</h1>
     <script>
-      window.location.href = location.protocol + "//www.nickchan.lol" + location.path;
+      window.location.href = location.protocol + "//www.nickchan.lol" + location.pathname;
     </script>
   </body>
 </html>
